--- a/meeting.html
+++ b/meeting.html
@@ -5,7 +5,7 @@
   script.addEventListener("load", function (event) {
     const config = {
       name: "Demo User",
-      meetingId: "milkyway",
+      meetingId: url.get("meetingId"),
       apiKey: "<API KEY>",
 
       containerId: null,
@@ -33,19 +33,4 @@
     "https://sdk.videosdk.live/rtc-js-prebuilt/0.3.1/rtc-js-prebuilt.js";
   document.getElementsByTagName("head")[0].appendChild(script);
   
-  script.addEventListener("load", function (event) {
-      //Get URL query parameters
-      const url = new URLSearchParams(window.location.search);
-
-      //...
-
-      const config = {
-        // ...
-        meetingId: url.get("meetingId"), // Get meeting id from params.
-        // ...
-      };
-
-      const meeting = new VideoSDKMeeting();
-      meeting.init(config);
-    });
 </script>
