--- a/meeting.html
+++ b/meeting.html
@@ -6,7 +6,7 @@
     const config = {
       name: "Demo User",
       meetingId: url.get("meetingId"),
-      apiKey: "<API KEY>",
+      apiKey: "9663eca8-dcf2-4916-ba0a-377a8483aeb4",
 
       containerId: null,
 
