--- a/meeting.html
+++ b/meeting.html
@@ -1,4 +1,10 @@
-<script>
+<!DOCTYPE html>
+<html>
+  <head>
+    <title>Meeting</title>
+  </head>
+  <body>
+    <script>
   var script = document.createElement("script");
   script.type = "text/javascript";
 
