--- a/createMeeting.html
+++ b/createMeeting.html
@@ -7,7 +7,7 @@
               return v.toString(16);
           });
           console.log("http://"+ window.location.host + "?meetingId="+ meetingId)
-          document.getElementById("copyInput").value = "https://"+ window.location.host + "/meeting.html?meetingId="+ meetingId;
+          document.getElementById("copyInput").value = "https://"+ window.location.host + "Meeting/meeting.html?meetingId="+ meetingId;
     }
 
     // Function to copy the link
