--- a/meeting.html
+++ b/meeting.html
@@ -9,6 +9,7 @@
   script.type = "text/javascript";
 
   script.addEventListener("load", function (event) {
+    const url = new URLSearchParams(window.location.search);
     const config = {
       name: "Demo User",
       meetingId: url.get("meetingId"),
